--- a/home-modules/themes/waybar.css
+++ b/home-modules/themes/waybar.css
@@ -1,84 +1,26 @@
-/*
-
-██╗    ██╗ █████╗ ██╗   ██╗██████╗  █████╗ ██████╗ 
-██║    ██║██╔══██╗╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-██║ █╗ ██║███████║ ╚████╔╝ ██████╔╝███████║██████╔╝
-██║███╗██║██╔══██║  ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-╚███╔███╔╝██║  ██║   ██║   ██████╔╝██║  ██║██║  ██║
- ╚══╝╚══╝ ╚═╝  ╚═╝   ╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-
-Waybar Config File by Arfan Zubi
-
-*/
-
 * {
-    font-family: 'FiraCode Nerd Font', sans-serif;
-    font-size: 16px;
+    font-family: 'JetBrainsMonoNerdFont', 'Noto Sans CJK';
+    font-size: 18px;
     min-height: 0;
 }
 
-window#waybar {
-    background: rgba(45, 53, 59, 0.9);
-    border: 2px solid rgba(61, 72, 77, 0.9);
-    color: #D3C6AA;
+window#waybar{
+    background: rgba(219, 217, 218, 0.0);
+    border: 0px solid rgba(0, 0, 0, 0.0);
+    color: #D3B76D;
 }
 
-#window, #clock, #system, #keyboard, #hardware {
-    margin: 5px;
-    padding: 0 10px;
-    background-color: #272E33;
-    border: 2px solid #3D484D;
-    border-radius: 15px;
+#network, #clock, #battery #language{
+    padding: 0 15px;
+    color: #D3B76D;
 }
 
 #window {
-    font-weight: bold;
-}
-
-#clock {
-    background-color: #A7C080;
-    border: 2px solid #2D353B;
-    color: #2D353B;
-    font-weight: bold;
-}
-
-#workspaces {
-    margin-right: 10px;
-    font-weight: bold;
-}
-
-#workspaces button {
-    border: none;
-    border-radius: 0;
-    color: #D3C6AA;
-    transition: all 0.3s ease-in-out;
-}
-
-#workspaces button.active {
-    background-color: #A7C080;
-    color: #2D353B;
-    transition: all 0.3s ease-in-out;
-}
-
-#workspaces button.focused {
-    background-color: #A7C080;
-}
-
-#workspaces button:hover {
-    box-shadow: inherit;
-    text-shadow: inherit;
-    background: #3D484D;
-    border: none;
-    color: #D3C6AA;
-}
-
-#keyboard-state {
-    margin-right: 7px;
-}
-
-#custom-wlogout {
-    margin-left: 7px;
     padding: 0 15px;
-    background-color: #A7C080;
-    color: #2D353B;
+    font-weight: bold;
+    color: #559887;
+
+    border-width: 2px; 
+    border-color: #559887;
+    border-bottom-style: solid;
 }
