--- a/home-modules/themes/waybar.css
+++ b/home-modules/themes/waybar.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'NotoSansMonoNerdFont', 'Noto Sans CJK';
+    font-family: 'Doto' 'Noto Sans CJK';
     font-size: 18px;
     min-height: 0px;
 }
