--- a/home-modules/themes/waybar.css
+++ b/home-modules/themes/waybar.css
@@ -5,20 +5,20 @@
 }
 
 window#waybar{
-    background-color: rgba(249, 235, 224, 0.9);
+    background-color: rgba(26, 30, 37, 0.9);
     border: 0px solid rgba(0, 0, 0, 0.0);
 }
 
 #network, #clock, #battery, #language{
     padding: 0 15px;
-    color: #373737;
+    color: #F5D3BF;
 }
 
 #window {
     padding: 0 15px;
-    color: #373737;
+    color: #F5D3BF;
 
     border-width: 2px; 
-    border-color: #373737;
+    border-color: #F5D3BF;
     border-bottom-style: solid;
 }
